remove unprofessional language

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper>"
       <div class="global-msg">
         <div class="container">
           <div class="msg">Welcome to my Travel Blog!</div>
@@ -164,7 +164,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptas adipisci vitae ipsam perspiciatis ducimus!
               Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </p>
-            <button> Click me fuck face. Hahaha <i class="fas fa-arrow-right"></i></button>
+            <button> Click me. Hahaha <i class="fas fa-arrow-right"></i></button>
 
             </div>
           </div>
@@ -181,7 +181,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptas adipisci vitae ipsam perspiciatis ducimus!
               Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </p>
-            <button> Click me fuck face. Hahaha <i class="fas fa-arrow-right"></i></button>
+            <button> Click me. Hahaha <i class="fas fa-arrow-right"></i></button>
 
             </div>
             
@@ -198,7 +198,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptas adipisci vitae ipsam perspiciatis ducimus!
               Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </p>
-            <button> Click me fuck face. Hahaha <i class="fas fa-arrow-right"></i></button>
+            <button> Click me. Hahaha <i class="fas fa-arrow-right"></i></button>
 
             </div>
 
@@ -217,13 +217,12 @@
 
         </form>
 
-      </div>
+      </di>
 
 
       <footer class="footer">
         
-      Travel Blog &copy; copy right, all right reserved by the Big Balls Guys and one man who has sex face! 
-    Made with matter in balls <i class="fas fa-bowling-ball"></i></footer>
+      Travel Blog &copy; copy right, all right reserved by Shibin Abraham. This is a Responsive UI Design Sample for all recruiters <i class="fas fa-bowling-ball"></i></footer>
     </div>
   </body>
 </html>
