--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
   </head>
   <body>
-    <div class="wrapper>"
+    <div class="wrapper">
       <div class="global-msg">
         <div class="container">
           <div class="msg">Welcome to my Travel Blog!</div>
@@ -217,7 +217,7 @@
 
         </form>
 
-      </di>
+    </div>
 
 
       <footer class="footer">
