--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travel Blog</title>
+    <title>A JOURNEY WITHIN</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -25,7 +25,7 @@
     <div class="wrapper">
       <div class="global-msg">
         <div class="container">
-          <div class="msg">Welcome to my Travel Blog!</div>
+          <div class="msg">STEP INTO THE UNKNOWN!</div>
           <div class="icons">
             <i class="fab fa-facebook-square" style="color: blueviolet"></i>
             <i class="fab fa-youtube" style="color: crimson"></i>
