--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
       <div class="global-msg">
         <div class="container">
-          <div class="msg">Do you have it in you?</div>
+          <div class="msg">HTML & CSS Tease</div>
           <div class="icons">
             <i class="fab fa-facebook-square" style="color: blueviolet"></i>
             <i class="fab fa-youtube" style="color: crimson"></i>
